--- a/styles/style.css
+++ b/styles/style.css
@@ -14,5 +14,72 @@
     --border-button: #1A1A1A;
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem;
+}
 
+main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.card-content{
+    padding: 1rem;
+}
+
+.name-user{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+}
+
+.name-user img{
+    height: 2.5rem;
+    border: solid .1rem var(--text);
+    border-radius: 50%;
+    padding: .3rem;
+}
+
+.img-user{
+    height: 20rem;
+    border-radius: 50%;
+    border: solid .4rem var(--img-profile);
+    position: relative;
+    left: 3rem;
+    object-fit: cover;
+}
+
+.datas{
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+
+.data{
+    display: flex;
+    align-items: center;
+    gap: .4rem;
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 1rem;
+}
+
+.footer img{
+    height: 2rem;
+}
+
+.controls{
+    z-index: 1;
+}
 
