--- a/styles/style.css
+++ b/styles/style.css
@@ -271,12 +271,10 @@ h3{
     justify-content: center;
     background-color: var(--bg-popup);
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    top: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
+    backdrop-filter: blur(3px);
 }
 
 .content-popup{
